<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btnBackupJson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backup_json" />

    <Button
        android:id="@+id/btnRestoreJson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/restore_json" />

    <Button
        android:id="@+id/btnResetAllData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reset_all_data" />

</LinearLayout>
