<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etRecurringMerchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_recurring_merchant" />

        <EditText
            android:id="@+id/etRecurringAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_amount"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinnerRecurringCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <Spinner
            android:id="@+id/spinnerRecurringAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/etRecurringDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_recurring_day"
            android:inputType="number" />

        <EditText
            android:id="@+id/etRecurringNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_note" />

    </LinearLayout>
</ScrollView>
